--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/Finaal game.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Finaal game.data.gz",
-        frameworkUrl: buildUrl + "/Finaal game.framework.js.gz",
-        codeUrl: buildUrl + "/Finaal game.wasm.gz",
+        dataUrl: buildUrl + "/Finaal game.data",
+        frameworkUrl: buildUrl + "/Finaal game.framework.js",
+        codeUrl: buildUrl + "/Finaal game.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Online multiplayer game",
