--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Finaal game.loader.js";
+      var loaderUrl = buildUrl + "/Final-Zone-Survival.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Finaal game.data",
-        frameworkUrl: buildUrl + "/Finaal game.framework.js",
-        codeUrl: buildUrl + "/Finaal game.wasm",
+        dataUrl: buildUrl + "/Final-Zone-Survival.data",
+        frameworkUrl: buildUrl + "/Final-Zone-Survival.framework.js",
+        codeUrl: buildUrl + "/Final-Zone-Survival.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Online multiplayer game",
